# numpyro_checkpoint

./: README.md  pyproject.toml
numpyro_checkpoint/: __init__.py  numpyro_checkpoint.py
