[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "numpyro_checkpoint"
version = "0.0.1"
authors = [
  { name="Matthew Mould", email="mattdmould@gmail.com" },
]
description = "Run numpyro MCMC with checkpointing during warmup and sampling."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ['h5ify', 'jax', 'jax_tqdm', 'numpyro']
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/mdmould/numpyro_checkpoint"
